--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "servissecin-web",
+  "name": "kaft-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue2-timepicker": "^1.1.6"
+    "css-loader": "^3.6.0",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
